Fix: do not show tooltip on mobile

--- a/cena-religii/etaty/css/main.css
+++ b/cena-religii/etaty/css/main.css
@@ -327,3 +327,7 @@ td {
 .leaflet-popup-content {
     margin: 8px;
 }
+
+@media (hover: none) {
+    .leaflet-tooltip-pane { display: none; }
+}
